// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItem> Snapshots and structure should render story 'Default' 1`] = `
<li
  className="lumx-list-item lumx-list-item--size-regular"
>
  <div
    className="lumx-list-item__wrapper"
  >
    <div
      className="lumx-list-item__content"
    >
      Text
    </div>
  </div>
</li>
`;

exports[`<ListItem> Snapshots and structure should render story 'Highlighted' 1`] = `
<li
  className="lumx-list-item lumx-list-item--size-regular"
>
  <a
    className="lumx-list-item__link lumx-list-item__link--is-highlighted"
    href="#"
    tabIndex={0}
  >
    <div
      className="lumx-list-item__content"
    >
      Text
    </div>
  </a>
</li>
`;

exports[`<ListItem> Snapshots and structure should render story 'Selected' 1`] = `
<li
  className="lumx-list-item lumx-list-item--size-regular"
>
  <a
    className="lumx-list-item__link lumx-list-item__link--is-selected"
    href="#"
    tabIndex={0}
  >
    <div
      className="lumx-list-item__content"
    >
      Text
    </div>
  </a>
</li>
`;

exports[`<ListItem> Snapshots and structure should render story 'Sizes' 1`] = `
<li
  className="lumx-list-item lumx-list-item--size-tiny"
>
  <div
    className="lumx-list-item__wrapper"
  >
    <div
      className="lumx-list-item__content"
    >
      Text
    </div>
  </div>
</li>
`;

exports[`<ListItem> Snapshots and structure should render story 'WithCustomLink' 1`] = `
<li
  className="lumx-list-item lumx-list-item--size-regular"
>
  <CustomLink
    className="lumx-list-item__link"
    href="http://google.com"
    tabIndex={0}
  >
    <div
      className="lumx-list-item__content"
    >
      My custom link
    </div>
  </CustomLink>
</li>
`;
